Installed core-js

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "core-js": "^3.21.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^17.0.2",
@@ -38,13 +39,13 @@
       ">0.2%",
       "not dead",
       "not op_mini all",
-      "IE 11"
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version",
-      "IE 11"
+      "ie 11"
     ]
   },
   "devDependencies": {
