--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@fontsource/montserrat": "^4.5.5",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
@@ -48,7 +49,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "sass": "^1.49.4"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-transform-runtime"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
