--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
